lyrics-ui/k8s/base/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: songs-service,lyrics-service,albums-service
  labels:
    app: lyrics-ui
    app.openshift.io/runtime: nginx
    app.kubernetes.io/part-of: right-lyrics
  name: lyrics-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lyrics-ui
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: lyrics-ui
    spec:
      volumes:
        - configMap:
            name: lyrics-ui
          name: lyrics-ui
      containers:
        - image: image-registry.openshift-image-registry.svc.cluster.local:5000/right-lyrics/lyrics-ui:latest
          imagePullPolicy: Always
          name: lyrics-ui
          volumeMounts:
            - mountPath: /opt/app-root/src/config.js
              name: lyrics-ui
              subPath: config.js
          ports:
            - containerPort: 8080
