lyrics-ui/k8s/base/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lyrics-ui
  name: lyrics-ui
spec:
  ports:
    - name: tcp-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: lyrics-ui
