lyrics-ui/k8s/base/ui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ui  
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /
            backend:
              serviceName: lyrics-ui
              servicePort: 8080
